--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body{
 	background-color: #0aadde00;
 }
 
+p{
+	margin-bottom: 0;
+}
+
 .wiki-image img{
 	width: 20%;
 }
@@ -23,15 +27,49 @@ body{
 
 .searchbar-container input{
 	width: 60%;
+	font: 16px arial,sans-serif;
+	padding-left: 10px;
+	line-height: 34px;
+	-webkit-appearance: textfield; 
 }
 
-i{
-	background-color: #eee;
+.searchbar-container input:focus{
+	-webkit-appearance: textfield;
 }
 
-.random-article{
-	text-align: center;
-	
+.searchbar-container input:hover{
+	border-color: #a0a0a0 #b9b9b9 #b9b9b9 #b9b9b9 !important;
+}
+
+.search-buttons{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.search-buttons .btn{
+	background-color: #f2f2f2;
+	border: 1px solid #f2f2f2;
+	border-radius: 2px;
+	color: #757575;
+	font-size: 13px;
+	font-weight: bold;
+	margin: 11px 4px;
+	min-width: 54px;
+	padding: 10px 16px;
+}
+
+.search-buttons button:hover, .search-buttons a:hover{
+	border: 1px solid #c6c6c6;
+	background-color: #f8f8f8;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+	color: #222;
+	background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+}
+
+.search-buttons button:focus, .search-buttons a:focus{
+	box-shadow: none;
+	border: 1px solid #4d90fe;
 }
 
 .search-item{
